# learning

./: .gitignore  .gitmodules
comprehensive_rust/dining-philosophers/: Cargo.toml
comprehensive_rust/link-checker/: Cargo.toml
professional_c++/: Makefile  generate_makefile.sh
professional_c++/c01_code/: Makefile
professional_c++/c02_code/: Makefile
professional_c++/c07_code/: Makefile
professional_c++/c08_code/: Makefile
professional_c++/c09_code/: Makefile
professional_c++/c10_code/: Makefile  MethodHiding.cpp
professional_c++/c11_code/: Makefile
professional_c++/c12_code/: Makefile
professional_c++/c13_code/: Makefile
professional_c++/c14_code/: Makefile
professional_c++/c15_code/: Makefile
professional_c++/c16_code/: Makefile
professional_c++/c17_code/: Makefile
professional_c++/c18_code/: Makefile
professional_c++/c19_code/: Makefile
professional_c++/c20_code/: Makefile
professional_c++/c21_code/: Makefile
professional_c++/c22_code/: Makefile
professional_c++/c23_code/: Makefile
professional_c++/c25_code/: Makefile
professional_c++/c26_code/: Makefile
professional_c++/c27_code/: Makefile
professional_c++/c28_code/: Makefile
professional_c++/c29_code/: Makefile
professional_c++/c30_code/: Makefile
professional_cmake/: .gitignore  CMakeLists.txt  compile.sh  notes.md  run.sh  svg_create_links.py
professional_cmake/ch04/: CMakeLists.txt  main.cpp
professional_cmake/ch04.03_linking_targets/: CMakeLists.txt  compile.sh  svg_create_links.py  svg_fix_links.py
professional_cmake/ch05/: CMakeLists.txt
professional_cmake/ch06/: CMakeLists.txt
professional_cmake/ch08/: CMakeLists.txt
professional_cmake/ch09/: CMakeLists.txt
professional_cmake/ch10/: CMakeLists.txt  app1.cpp  app2.cpp  generator.cpp  generator.hpp  notes.md  src1.cpp  src1.hpp  src2.cpp  src2.hpp
professional_cmake/ch11/: CMakeLists.txt
professional_cmake/ch14/: CMakeLists.txt  app.cpp  lib.cpp  lib.hpp  notes.md
professional_cmake/ch15/: CMakeLists.txt  notes.md
professional_cmake/ch17/: CMakeLists.txt
professional_cmake/cmake/: Debug.cmake
sams_c++_8th_ed/: Makefile  subdirs.mk
sams_c++_8th_ed/ch01/: cout_flush_test.cpp  ex01.cpp  ex03.cpp  notes.txt
sams_c++_8th_ed/ch02/: ex01.cpp  ex03.cpp  list02.1_HelloWorldAnalysis.cpp  list02.2_using_namespace_std.cpp  list02.3_only_using_some_functions.cpp  list02.4_cout_example.cpp  list02.5_use_return_value.cpp  list02.6_Use_cin_and_cout.cpp  notes.txt
sams_c++_8th_ed/ch03/: ex02.cpp  ex03.cpp  list03.1_Using_Variables.cpp  list03.2_Variable_Scope.cpp  list03.3_Global_Variables.cpp  list03.4_Signed_and_Unsigned_Integers.cpp  list03.5_Size_of_Variable_Types.cpp  list03.6_Automatic_Type_Inference.cpp  list03.7_Declare_a_Constant_using_const.cpp  list03.8_Using_constexpr.cpp  list03.9_Using_Enumerated_Values_with_enum_Classes.cpp  notes.txt
sams_c++_8th_ed/ch04/: list04.1_Array_of_integers.cpp  list04.2_Assigning_Values_to_an_Array.cpp  list04.3_Multidimensional_Arrays.cpp  list04.4_Dynamic_Arrays_using_vector.cpp  list04.5_Null-Terminated_Strings.cpp  list04.6_Risky_Cstrings.cpp  list04.7_Using_std_string.cpp  notes.txt
sams_c++_8th_ed/ch05/: ex03.cpp  list05.01_Arithmetic_on_Integers.cpp  list05.02_Postfix_and_Prefix.cpp  list05.03_Equality_and_Relational_Operators.cpp  list05.04_Logical_AND_and_OR.cpp  list05.05_Conditional_Processing.cpp  list05.06_More_Logical_Operators.cpp  list05.07_Bitwise_Operators.cpp  list05.08_Bitwise_Shift_Operators.cpp  list05.09_Compound_Assignment_Operators.cpp  list05.10_Using_sizeof_Operator.cpp  notes.txt
sams_c++_8th_ed/ch06/: ex02.cpp  ex03.cpp  ex04.cpp  list06.14_Nested_Loops_to_Multiply_Arrays.cpp  list06.16_Nested_Loops_to_Calculate_Fibonacci.cpp  notes.txt
sams_c++_8th_ed/ch07/: fibonacci_iterative.cpp  list07.12_Lambda_Functions.cpp  notes.txt
sams_c++_8th_ed/ch08/: const_pointers_and_references.cpp  notes.txt
sams_c++_8th_ed/ch09/: ex04.cpp  list09.10_Singleton_Class.cpp  notes.txt
sams_c++_8th_ed/ch10/: notes.txt
sams_c++_8th_ed/ch11/: notes.txt
sams_c++_8th_ed/ch12/: notes.txt
sams_c++_8th_ed/ch13/: notes.txt
sams_c++_8th_ed/ch14/: ex.cpp  list14.05_Template_Specialization.cpp  list14.06_Static_Templated_Variables.cpp  notes.txt
sams_c++_8th_ed/ch15/: list15_01_Find_Element_in_an_Array.cpp  notes.txt
sams_c++_8th_ed/ch16/: ex01.cpp  ex02.cpp  ex03.cpp  ex04.cpp  ex05.cpp  notes.txt
sams_c++_8th_ed/ch17/: ex01.cpp  ex02.cpp  ex04.cpp  list17.07_Vector_size_and_capacity.cpp  notes.txt
sams_c++_8th_ed/ch18/: ex01.cpp  ex02.cpp  ex03.cpp  ex04.cpp  notes.txt
sams_c++_8th_ed/ch19/: ex01.cpp  ex02.cpp  list19.02_Inserting_Elements_into_set_and_multiset.cpp  list19.05_A_Telephone_Directory_using_set_find_and_erase.cpp  notes.txt
sams_c++_8th_ed/ch20/: ex03.cpp  notes.txt  test_map.cpp
sams_c++_8th_ed/ch21/: ex01.cpp  ex02.cpp  ex03.cpp  list21.01_Unary_Functions_and_Structures_as_Functors.cpp  list21.02_Function_Object_That_Holds_State.cpp  list21.04_Unary_Predicate.cpp  notes.txt
sams_c++_8th_ed/ch22/: ex01.cpp  ex02.cpp  list22.02_Lambda_to_Test_For_Even_Numbers.cpp  notes.txt
sams_c++_8th_ed/ch23/: list23.01_Using_find_and_find_if.cpp  list23.02_Using_count_and_count_if.cpp  list23.03_Using_search_and_search_n.cpp  list23.04_Using_fill_and_fill_n_to_Set_Initial_Values.cpp  list23.05_Using_generate_and_generate_n_to_Initialize_to_Random_Values.cpp  list23.07_Using_transform_with_Unary_and_Binary_Functions.cpp  list23.08_Using_copy_And_copy_if_As_Well_As_remove_And_remove_if.cpp  list23.09_Using_replace_And_replace_if.cpp  list23.10_Using_sort_And_binary_search_With_unique.cpp  list23.11_Using_partition_and_Stable_Partition.cpp  list23.12_Using_lower_bound_And_upper_bound_In_a_Sorted_Collection.cpp  notes.txt
sams_c++_8th_ed/ch24/: ex02.cpp  notes.txt
sams_c++_8th_ed/ch25/: ex.cpp  notes.txt
sams_c++_8th_ed/ch26/: notes.txt
sams_c++_8th_ed/ch27/: Makefile  list27.06_Inserting_Text_Into_A_string_Using_cin.cpp  notes.txt
sams_c++_8th_ed/ch28/: notes.txt
sams_c++_8th_ed/ch29/: notes.txt  test.cpp  (+1 more)
(+8 files in other folders)
