cmake_minimum_required(VERSION 3.15)

# Set top-level name
project(Learning)

# Automatically build shared libraries
set(BUILD_SHARED_LIBS YES)

# Add all subdirectories
add_subdirectory(ch04)
add_subdirectory(ch05)
add_subdirectory(ch06)
add_subdirectory(ch09)
add_subdirectory(ch10)
add_subdirectory(ch11)
add_subdirectory(ch14)
add_subdirectory(ch15)
